--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "es6",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index"
@@ -11,10 +12,14 @@
   "description": "",
   "dependencies": {
     "@vercel/speed-insights": "^1.2.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsdom": "^26.1.0",
-    "mongodb": "^6.18.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0",
+    "nodemailer": "^7.0.10",
+    "openai": "^6.8.1"
   }
 }
